Bug 495588 - Tokodon doesn't support more than 4 media attachments
Summary: Tokodon doesn't support more than 4 media attachments
Status: RESOLVED FIXED
Alias: None
Product: Tokodon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-30 15:21 UTC by Joshua Goins
Modified: 2024-12-26 22:19 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Joshua Goins 2024-10-30 15:21:45 UTC
Not creating them, and I'm not even sure if it displays them correctly. Worth trying out!
Comment 1 Joshua Goins 2024-12-26 22:19:40 UTC
Git commit b3033a65f8a5f1286446ba399abfe9cb0dcdc5fc by Joshua Goins.
Committed on 26/12/2024 at 22:00.
Pushed by redstrate into branch 'master'.

Add support for posting more than 4 media attachments

Now Tokodon reads this value from the server, and while they don't look
great when it's more than 4 - it is functional.

M  +7    -0    src/account/abstractaccount.cpp
M  +4    -0    src/account/abstractaccount.h
M  +1    -1    src/content/ui/StatusComposer/StatusComposer.qml
M  +1    -1    src/editor/attachmenteditormodel.cpp

https://invent.kde.org/network/tokodon/-/commit/b3033a65f8a5f1286446ba399abfe9cb0dcdc5fc