Add support for posting more than 4 media attachments

Now Tokodon reads this value from the server, and while they don't look
great when it's more than 4 - it is functional.

BUG: 495588